--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <li><a href="#">Our Services</a></li>
         </ul>
         <!-- contact us list -->
-        <ul>
+        <ul class="contact">
           <h1>Contact Us</h1>
           <li>
             <p>111-222-3333</p>
@@ -51,7 +51,38 @@
         </ul>
       </div>
       <!-- down-section -->
-      <div class="down-section"></div>
+      <div class="down-section">
+        <ul>
+          <h1>Company</h1>
+          <li><a href="#">Teams</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Contact Us</a></li>
+          <li><a href="#">Support</a></li>
+        </ul>
+        <ul>
+          <h1>About</h1>
+          <li><a href="#">Team & Company</a></li>
+          <li><a href="#">Location</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Our Services</a></li>
+        </ul>
+        <!-- social -->
+        <div class="social">
+          <h1>Social</h1>
+          <div class="social-icons">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+          </div>
+        </div>
+        <div class="search">
+          <h1>Email</h1>
+          <input type="email" placeholder="Enter you email" />
+        </div>
+      </div>
+      <!-- copyright -->
+      <p class="copyright">Doran Software &copy; 2020</p>
     </footer>
   </body>
 </html>
